--- a/index.html
+++ b/index.html
@@ -68,6 +68,70 @@
                 <use href="./images/icons.svg#icon-close-black-icon"></use>
               </svg>
             </button>
+
+            <form class="modal-form">
+              <h2 class="modal-header">Оставьте свои данные, мы вам перезвоним</h2>
+              <ul class="form-item">
+                <li class="form-li">
+                  <label for="name" class="form-label">Имя</label>
+                  <div class="input-box">
+                    <input type="text" name="name" id="name" class="form-input" />
+                    <svg class="form-icon" width="18" height="18">
+                      <use href="./images/icons.svg#icon-person-black"></use>
+                    </svg>
+                  </div>
+                </li>
+                <li class="form-li">
+                  <label for="tel" class="form-label">Телефон</label>
+                  <div class="input-box">
+                    <input type="tel" name="phone_number" id="tel" class="form-input" />
+                    <svg class="form-icon" width="18" height="18">
+                      <use href="./images/icons.svg#icon-phone-black"></use>
+                    </svg>
+                  </div>
+                </li>
+                <li class="form-li">
+                  <label for="email" class="form-label">Почта</label>
+                  <div class="input-box">
+                    <input type="email" name="email" id="email" class="form-input" />
+                    <svg class="form-icon" width="18" height="18">
+                      <use href="./images/icons.svg#icon-email-black"></use>
+                    </svg>
+                  </div>
+                </li>
+                <li class="form-li-text">
+                  <label for="comment" class="form-label">Комментарий</label>
+                  <textarea
+                    class="form-input-text"
+                    name="comment"
+                    id="comment"
+                    placeholder="Введите текст"
+                  ></textarea>
+                </li>
+                <li class="form-li">
+                  <label for="terms" class="form-checkbox">
+                    <input
+                      name="terms"
+                      id="terms"
+                      type="checkbox"
+                      class="checkbox visually-hidden"
+                      required
+                    />
+                    <span class="form-checkbox-item"></span>
+                    <span class="form-checkbox-border"></span>
+                    <svg class="form-checkbox-icon" width="16" height="15">
+                      <use href="./images/icons.svg#icon-icon-check"></use>
+                    </svg>
+
+                    <span class="form-checkbox-text"
+                      >Соглашаюсь с рассылкой и принимаю
+                      <a class="link-terms" href="" target="_blank">Условия договора</a></span
+                    >
+                  </label>
+                </li>
+              </ul>
+              <button type="submit" class="form-button">Отправить</button>
+            </form>
           </div>
         </div>
       </section>
@@ -479,6 +543,25 @@
               </a>
             </li>
           </ul>
+        </div>
+
+        <div class="subscribe">
+          <h2 class="subscribe-title">Подпишитесь на рассылку</h2>
+          <form class="subscribe-form">
+            <input
+              type="email"
+              name="email-bottom"
+              id="email-bottom"
+              class="subscribe-input"
+              placeholder="E-mail"
+            />
+            <button type="submit" class="subscribe-button">
+              Подписаться
+              <svg class="subscribe-icon" width="24" height="24">
+                <use href="./images/icons.svg#icon-icon-send"></use>
+              </svg>
+            </button>
+          </form>
         </div>
       </div>
     </footer>
