--- a/portfolio.html
+++ b/portfolio.html
@@ -311,6 +311,25 @@
             </li>
           </ul>
         </div>
+
+        <div class="subscribe">
+          <h2 class="subscribe-title">Подпишитесь на рассылку</h2>
+          <form class="subscribe-form">
+            <input
+              type="email"
+              name="email-bottom"
+              id="email-bottom"
+              class="subscribe-input"
+              placeholder="E-mail"
+            />
+            <button type="submit" class="subscribe-button">
+              Подписаться
+              <svg class="subscribe-icon" width="24" height="24">
+                <use href="./images/icons.svg#icon-icon-send"></use>
+              </svg>
+            </button>
+          </form>
+        </div>
       </div>
     </footer>
   </body>
