--- a/index.html
+++ b/index.html
@@ -109,24 +109,17 @@
                   ></textarea>
                 </li>
                 <li class="form-li">
-                  <label for="terms" class="form-checkbox">
-                    <input
-                      name="terms"
-                      id="terms"
-                      type="checkbox"
-                      class="checkbox visually-hidden"
-                      required
-                    />
-                    <span class="form-checkbox-item"></span>
-                    <span class="form-checkbox-border"></span>
-                    <svg class="form-checkbox-icon" width="16" height="15">
-                      <use href="./images/icons.svg#icon-icon-check"></use>
-                    </svg>
+                  <input
+                    name="terms"
+                    id="terms"
+                    type="checkbox"
+                    class="checkbox visually-hidden"
+                    required
+                  />
 
-                    <span class="form-checkbox-text"
-                      >Соглашаюсь с рассылкой и принимаю
-                      <a class="link-terms" href="" target="_blank">Условия договора</a></span
-                    >
+                  <label for="terms" class="form-checkbox-text"
+                    >Соглашаюсь с рассылкой и принимаю
+                    <a class="link-terms" href="" target="_blank">Условия договора</a>
                   </label>
                 </li>
               </ul>
