--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
           <h1 class="hero-title">Эффективные решения для вашего бизнеса</h1>
           <button class="button" type="button" data-modal-open>Заказать услугу</button>
         </div>
-
+        <!-- /* ----------Модaльное окно-------- */ -->
         <div class="backdrop is-hidden" data-modal>
           <div class="modal">
             <button class="modal-close" data-modal-close>
@@ -68,7 +68,7 @@
                 <use href="./images/icons.svg#icon-close-black-icon"></use>
               </svg>
             </button>
-
+            <!-------------------- Разметка формы------------ -->
             <form class="modal-form">
               <h2 class="modal-header">Оставьте свои данные, мы вам перезвоним</h2>
               <ul class="form-item">
