done center chekbox

--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
                     placeholder="Введите текст"
                   ></textarea>
                 </li>
-                <li class="form-li">
+                <li class="form-li markup">
                   <input
                     name="terms"
                     id="terms"
